--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sistem Informasi Data Industri</title>
 <link rel="stylesheet" href="style.css">
  <style type="text/css" media="print" >
     @page { size: 20in 11.7in; }
