--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistem Informasi Data Industri</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -12,7 +12,7 @@
         <div class="homepage-header">
             <div class="homepage-header-tittle">
                 <div class="homepage-header-tittle-logo"><img src="image/logohsu.png" alt="" width="64px" ></div>
-                <div class="homepage-header-tittle-text">Sistem Informasi Data Industri</div>
+                <div class="homepage-header-tittle-text">Sistem Informasi Data UKM</div>
             </div>
 
             <div class="homepage-header-menucontainer">
